# halvin

./: README.md  cabal.config  halvin.cabal
docs/: Makefile  conf.py  index.rst  make.bat
src/halvin/: Accept.hs  AckAccept.hs  AckPropose.hs  Cluster.hs  Commutate.hs  Commutating.hs  DeliveryQueue.hs  Epoch.hs  Executor.hs  Message.hs  MessageProcessor.hs  Node.hs  NodeState.hs  NonCommutatingTransactionSet.hs  Phase.hs  Position.hs  Propose.hs  Transaction.hs  TransactionExeProgress.hs  TransactionHashMap.hs  TransactionState.hs
src/main/: Main.hs
src/test/: AllTests.hs  HalvinTest.hs
